# HW23

./: .env  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup_project.bat  shell_commands.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: category_data.json  product_data.json
catalog/management/commands/: load_catalog.py  seed_products.py
catalog/migrations/: 0001_initial.py  0002_product_dimensions_product_is_available_and_more.py
catalog/templates/: base.html
catalog/templates/catalog/: category.html  contacts.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/includes/: menu.html
myproject/: settings.py  urls.py
